# sempl

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  repl  requirements-dev.txt  requirements.txt  sempl  sempl.py  test
.github/actions/: poetry-freeze.yml
.github/actions/poetry-freeze/: action.yml
.github/actions/set-up-poetry/: action.yml
.github/workflows/: github-actions.yml  main.yml
examples/: calculator.sampl
lexer/: interfaces.py  lexer.py  matchers.py  tokens.py
src/: __init__.py
src/ast/: __init__.py  abstract.py  ast_nodes.py  to_str_helpers.py
src/ast_/: ast_nodes.py
src/errors/: __init__.py  error.py  evaluator_errors.py  parser_errors.py
src/evaluation/: __init__.py  builtin_funcs.py  consts.py  errors.py  evaluator.py  std_lib.py  sub_evaluators.py
src/evaluation/values/: __init__.py  consts.py  scope.py  types.py  value_base.py  value_types.py  values.py  values_base.py  values_types.py
src/helpers/: __init__.py  enum_helpers.py  result_helpers.py
src/lexer/: __init__.py  interfaces.py  lexer.py  matchers.py  tokens.py
src/parser/: __init__.py  errors.py  expr_sub_parsers.py  interfaces.py  parser.py  parser_base.py  stmt_sub_parsers.py  types.py
src/repl/: __init__.py  __main__.py  repl.py
src/repl/structures/: __init__.py  enums.py  payloads.py
tests/: TG_lexer_tests.py  __init__.py  conftest.py  tg_evaluator.py  tg_lexer.py  tg_lexer_tests.py  tg_parser.py  tg_parser_expr_complex.py  tg_parser_expr_literal.py  tg_parser_stmt.py  tg_parser_tests.py
tests/mock/: __init__.py  exceptions.py  lexer_mock.py  parser_mock.py
tests/static/: __init__.py  eval_tests_data.py  parser_expr_complex_tests_data.py  parser_stmt_tests_data.py  parser_tests_data.py
tests/utils/: __init__.py  decorators.py  payloads.py  types.py
