[tool.poetry]
name = "interpreter"
version = "0.1.0"
description = ""
authors = ["Hryhorii Biloshenko <biloshry@cvut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
result = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"
ipython = "^8.17.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
